- **Efficient Batching**: Optimized batch sizes for different models
- **Token Optimization**: Better token usage and limit management
- **Memory Efficiency**: Improved memory usage patterns

### Timeout Configuration
- **Configurable AI Request Timeout**: `POSTPROCESS_AI_REQUEST_TIMEOUT_MS` (default 140000 ms) used in all OpenAI/Azure code paths.
- **Configurable Bedrock Timeout**: `POSTPROCESS_BEDROCK_REQUEST_TIMEOUT_MS` (default 140000 ms) used for Bedrock.
- **Consistent Messaging**: Timeout errors report exact seconds from the configured value.
- **AbortController**: All providers use AbortController with the configured timeouts.

### Routing and Logging
- **RoutingMode Support**: Backend respects `routingMode` and adjudicated flags to route each comment to the correct provider/model (Scan A vs Scan B) for both phases; evenly splits when both flagged.
- **Detailed Chunk Logs**: Added per-chunk token logs showing input (incl. prompt), estimated output for redaction and rephrase using I/O ratios, and model limits used for gating.

### Input/Output Improvements
- **Better Format Handling**: Improved parsing of AI responses
- **ID Tagging Support**: Enhanced support for ID-tagged responses
- **Result Validation**: Better validation of transformation results
- **Error Recovery**: Improved handling of malformed responses

### Integration Enhancements
- **Seamless Integration**: Better integration with scan-comments and adjudicator
- **Shared Infrastructure**: Uses same authentication and configuration systems
- **Consistent Logging**: Unified logging and monitoring approach
- **Data Consistency**: Maintains consistency across the processing pipeline

### Monitoring and Logging
- **AI Interaction Logging**: Complete logging of all AI transformations
- **Performance Metrics**: Detailed timing and efficiency measurements
- **Error Correlation**: Better error tracking with scan run IDs
- **Usage Analytics**: Comprehensive usage and performance analytics